@@ -23,6 +23,7 @@ Other features
  * Moved usage count to the sidebar on the edit page (Kees Hink)
  * Explorer menu now reflects customisations to the page listing made via the `construct_explorer_page_queryset` hook and `ModelAdmin.exclude_from_explorer` property (Tim Heap)
  * "Choose another image" button changed to "Change image" to avoid ambiguity (Edd Baldry)
+ * Added hooks ``before_create_user``, ``after_create_user``, ``before_delete_user``, ``after_delete_user``, ``before_edit_user``, ``after_edit_user`` (Jon Carmack)
 
 Bug fixes
 ~~~~~~~~~
